--- a/azure-pixeltracker-server/pom.xml
+++ b/azure-pixeltracker-server/pom.xml
@@ -46,6 +46,7 @@
                 </dependencies>
             </plugin>
         </plugins>
+        <finalName>ROOT</finalName>
     </build>
     <dependencies>
         <dependency>
