--- a/azure-pixeltracker-server/src/main/webapp/WEB-INF/web.xml
+++ b/azure-pixeltracker-server/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,17 @@
     <servlet>
         <servlet-name>springmvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.microsoft.azure.server.pixeltracker.impl.TrackingPixelConfigImpl</param-value>
+        </init-param>
+
         <load-on-startup>1</load-on-startup>
     </servlet>
      
