Fixing missing pom version

--- a/cortana-pixeltracker-server/pom.xml
+++ b/cortana-pixeltracker-server/pom.xml
@@ -22,6 +22,11 @@
             <version>${springBootFramework}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>cortana-pixeltracker-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <repositories>
