change scope to test?

--- a/cortana-pixeltracker-server/pom.xml
+++ b/cortana-pixeltracker-server/pom.xml
@@ -20,7 +20,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <version>${springBootFramework}</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
