--- a/cortana-pixeltracker-core/pom.xml
+++ b/cortana-pixeltracker-core/pom.xml
@@ -8,12 +8,46 @@
         <groupId>com.microsoft.azure</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.2.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.2.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jersey2-jaxrs</artifactId>
+            <scope>compile</scope>
+            <version>1.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>1.5.3.RELEASE</version>
+        </dependency>
+    </dependencies>
 
     <artifactId>cortana-pixeltracker-core</artifactId>
     <packaging>jar</packaging>
 
     <name>Microsoft Azure Pixel Tracker Core</name>
     <description>This package contains Microsoft Azure Pixel Tracker Core.</description>
+    <url>https://github.com/Azure/azure-pixeltracker</url>
 
     <licenses>
         <license>
