--- a/cortana-pixeltracker-server/pom.xml
+++ b/cortana-pixeltracker-server/pom.xml
@@ -80,17 +80,27 @@
     <build>
         <plugins>
             <plugin>
+                <version>1.5.3.RELEASE</version>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.3.RELEASE</version>
+                <configuration>
+                    <fork>true</fork>
+                    <mainClass>com.microsoft.azure.pixeltracker.server.Application</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
